# quant-research

./: README.md  pyproject.toml
src/quant_research/: backtest.py  data.py  main.py  metrics.py  strategy.py  trend_strategy.py
src/quant_research/core/: __init__.py  backtest.py
src/quant_research/strategies/: __init__.py  trend_strategy.py
